Performance verbesserung von 5min auf 1:40